sites/all/themes/asb/sass/_layout.scss
/**
 * @file
 * Positioning for responsive layout .
 *
 * Define CSS classes to create a table-free, 3-column, 2-column, or single
 * column layout depending on whether blocks are enabled in the left or right
 * columns.
 *
 * This layout uses the Zen Grids plugin for Compass: http://zengrids.com
 */

// We are going to create a 980px wide, 5 column grid with 20px gutters between
// columns (applied as 10px of left/right padding on each column).
$zen-column-count:  8;
$zen-gutter-width:  10px;

// IE6-7 don't support box-sizing: border-box. We can fix this in 1 of 3 ways:
// - Drop support for IE 6/7. :-) In the _base.scss, set $legacy-support-for-ie6
//   and $legacy-support-for-ie7 to false.
// - (Preferred) Install the box-sizing polyfill and set the variable below to
//   the absolute path URL to the boxsizing.htc file.
//   @see https://github.com/Schepp/box-sizing-polyfill
//   $box-sizing-polyfill-path: "/path/to/boxsizing.htc";
// - Use the same CSS unit for grid width and gutter width (use px for both or
//   use % for both, etc.) and set the box-sizing variable to content-box.
//   $zen-box-sizing: content-box;

// You can generate more efficient CSS if you manually apply the
// zen-grid-item-base mixin to all grid items from within a single ruleset.
$zen-auto-include-item-base: false;

// Region Search
.front {
  .region-search {
    position: relative;
  }
  #content {
    padding-top: 2em;
  }
}

// Tour
#tour.hidden {
  iframe {
    @include element-invisible();
  }
}

#tour.active {
  @include element-invisible-off();
  display: none;
}

#main {
  // @include clearfix;
  position: relative;
  top: 0;
  @include breakpoint( md ){
    top: -20px;
    margin-bottom: -20px;
  }
    @include zigzag-border ($odd-backdrop, $backdrop);
}



// Create a scheme has different background color
  .page-node-add-scheme {
  #main {
    @include zigzag-border ($panel, $backdrop);
  }
}

.page-schemes #main {
  top: -8px;
  margin-bottom:-8px;
}

.front #main { 
  @include breakpoint( md ){
    position: relative;
    top: 83px;
    margin-bottom: 83px;
  }
}

#main #content .wrapper{
  section.content,
  #node-content {
    padding: 0 10px;
  }
}

.page-user-edit {
  section.main-content {
    padding: 0 10px;
  }
}

#content aside.scheme-meta,
#content aside.user-meta,
#content aside#sidebar {
  // this 100% was causing overflow-horizontal on breakpoint(sm) 
  // width: 100%;
  @include breakpoint(md){
    @include zen-grid-item(2, 6);
    @include box-sizing(content-box);    
  }
}

aside.scheme-meta {
  @include breakpoint( md ){
    // margin-top: 1em;
    @include clearfix;
  }
}

#content article>header, {
  @include clearfix;    
}

/* ------------------------ */
/* Main Layouts:            */
/* ------------------------ */

#content {
  // keeps the footer from overlapping content
  @include legacy-pie-clearfix;
}

@include breakpoint( md ) {
  $zen-grid-width: 960px;
  $gutter-width: 20px;
  $zen-column-count: 8;

  #main .scheme-collection-view .view-content,
  #main .scheme-collection-view .block-title,
  #main section.main-content,
  #main form#privatemsg-list {
    @include box-sizing( border-box );
    max-width: 960px;
    margin: 0 auto;
    overflow: auto;
  }
  #main #block-views-scheme-overview-block-1.scheme-collection-view .view-content {
    overflow: visible;
  }
  .not-front.page-node #content,
  .not-front.page-user #content,
  .not-front.page-node-edit #content {
    width: 100%;
    margin-left: 0;
    margin-right: 0;
  }
  
  // @todo ask ross/pea what is .sidebar-second section.page-content?
  .sidebar-second section.page-content,
  article .wrapper>section.content {
    @include zen-grid-item(6,0);
    margin-left: 0;
  }
}

/* ------------------------ */
/* Add scheme pages:        */
/* ------------------------ */
.page-node-add-scheme {
  #content {
    width: $zen-grid-width;
    position: relative;
    @include box-sizing( border-box );
    padding-left: 150px;
    .form-field-type-text-long,
    .form-type-textfield,
    .form-wrapper {
      max-width: 500px;
    }
  }
}

/* ------------------------ */
/* Footer content:          */
/* ------------------------ */
#footer {

  background: $backdrop;
  padding-bottom: 5em;

  section.content {
    

    #block-views-inspiration-footer-block {
      @include zen-nested-container;
      li:first-child {
        @include zen-grid-item(1, 1);
      }
      li:nth-child(2) {
        @include zen-grid-item(1, 2);
      }
      li:last-child {
        @include zen-grid-item(1, 3);
      }
      li {
        @include zen-grid-flow-item( 2,8 );
        // float: left;
        .footer-image-wrap {
          clear: both;
          display: block;
          float: none;
        }
      }
    }

    @include breakpoint( md ){
      @include zen-grid-container;
      #block-views-goals-and-schemes-block,
      #block-views-goal-taxonomy-test-block {
        @include zen-grid-item( 3, 1 );
        table {
          width: 95%;
        }
      }
      #block-views-inspiration-footer-block {
        @include zen-grid-item( 3, 4 );
        @include zen-nested-container;
        li:first-child {
          @include zen-grid-item(1, 1);
        }
        li:nth-child(2) {
          @include zen-grid-item(1, 2);
        }
        li:last-child {
          @include zen-grid-item(1, 3);
        }
        li {
          @include zen-grid-flow-item( 2,8 );
          // float: left;
          .footer-image-wrap {
            clear: both;
            display: block;
            float: none;
          }
        }
      }
      #block-menu-menu-as {
        @include zen-grid-item( 2, 7 );
      }
    }

    @include breakpoint( md, max-width ){
      &>.block-menu,
      &>.block-views {
        padding-left: 2em !important;
        float: none;
      }
      #block-views-inspiration-footer-block,
      #block-menu-menu-as {
        margin-top: 2em;
      }
      .view-inspiration-footer {
        @include clearfix;
      }
    }

  }
}

/* ------------------------ */
/* Centering content:       */
/* ------------------------ */
@include breakpoint(md){
  #header .content,
  .page-node-members .page-main-content,
  .section-dashboard .page-main-content,
  #content article>header .wrapper,
  #content article>.wrapper,
  #content>header .page-wrapper,
  #footer section.content,
  .messages__list,
  .views-exposed-widgets,
  .page-node-add-scheme #main,
  .node-type-scheme.og-context.og-context-node.section-node-edit #content,
  .page-user.not-logged-in #content,
  #add_page_scroll_wrapper,
  .no-sidebars section.page-content {
    /* For screen sizes larger than 960px, prevent excessively long lines of text by setting a max-width. */
    margin-right: auto;
    margin-left: auto;
    max-width: 960px;
  }
}

#main {
  padding-bottom: 5em;
}

/* ------------------------ */
/* Schemes Pager:           */
/* ------------------------ */
#add_page_scroll_wrapper {
  
  @include breakpoint( md, max-width ) {
    &:before {
      content: "Filter schemes";
      text-transform: uppercase;
      margin-bottom: 1em;
      text-align: center;
      display: block;
      width: 100%;
      font-size: 2em;
      font-family: $header-font-family;
    }
    padding-top: 2em;
    border-top: 1px solid $rules-color;
    #issues_filter,
    #collections_filter {
      width: 50%;
      margin: 0 auto;
      .chosen-container {
        width: 100% !important;
      }
    }
    #load_more_schemes_button {
      margin: .5em auto !important;
      width: 50%;
      display: block;
    }
  }

  @include breakpoint( md ) {

    #issues_filter,
    #collections_filter {
      padding-top: .5em;
      .chosen-container {
        width: 100% !important;
      }
    }

    #issues_filter {
      @include zen-float();
      @include zen-grid-flow-item( 2, 8 );
      @include box-sizing( border-box );
      padding-right: 1em;   
    }

    #load_more_schemes_button {
      @include zen-float();
      @include zen-grid-flow-item( 4, 8 );
      @include box-sizing( border-box );
    }
  
    #collections_filter {
      @include zen-float();
      @include zen-grid-flow-item( 2, 8 );
      @include box-sizing( border-box );
      padding-left: 1em;        
    }

  }

}

